# vida

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  COMPREHENSIVE_MAINNET_REPORT.md  Dockerfile  LICENSE  MAINNET_READINESS_REPORT.md  MAINNET_STATUS.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-tao.txt  requirements.txt
.github/workflows/: ci-debug.yml  ci.yml  covenant-ci.yml  ruff.yml  tests.yml
dev/negotiation/: negotiation.py  test_covenant_negotiation.py
docs/: BACKUP_RECOVERY.md  COMPETITIVE_POSITION.md  DAY_ONE_REPLIES.md  GITHUB_ABOUT.txt  GITHUB_TECHNICAL_DESCRIPTION.md  HERMES_INTEGRATION.md  HERMES_TOOLS.md  LAUNCH_PLAN.md  MARKETING.md  ORIGIN_HOSTILE_QA.md  PLUGIN_ROADMAP.md  PLUGIN_TICKETS.md  PRODUCT.md  SECURITY_HARDENING.md  SHIP_PROUD.md  coamm-integration.md  covenant-deployment.md  covenant_improvement_schedule.md  kccs.md  x402-spec-gaps.md
docs/brand/: x_post_copy.txt
docs/plugins/: AUTONOMY_KASPA_VS_TAO.md  COVENANT_BLOCKER_STATUS.md  tao.md  tao_agent_subnet_v2.md
docs/plugins/covenant/: AGENT_HARD_CAP_DESIGN.md  BUILD_1074.md  C_TN10_STATUS.md  GO_NOGO.md  PHASE0_TOOLCHAIN.md  README.md
docs/proofs/: README.md  claude_fable_qa.md  claude_fable_qa_prompt.md  committee_negotiation_qa.md  committee_qa.md  covenant_tn10_microproof.md  guardfall_analysis.md  kcc_0001_analysis.md  negotiation_commercial_principles.md  negotiation_learning_design.md  tao_agent_session_live.md  tao_live_e2e.md  tao_optimize_plan_live.md  tao_p2p_and_optimizer.md  tao_phase1_balance.md  tao_phase1_health.md  tao_phase1b_extrinsic.md  tao_phase1b_stake_policy.md  tao_qa_report.md
scripts/: advanced_covenant_testing.py  advanced_paper_trading.py  ci_tao.sh  compile_contracts.py  comprehensive_mainnet_testing.py  covenant_fund_agent_pot.js  covenant_manager.py  covenant_spend_agent_pot.js  covenant_tn10_lab.sh  create_mainnet_wallet.py  dust_test.py  extended_paper_trading.py  grant_session.py  grant_tao_session.py  mainnet_covenant_testing.py  mainnet_test.sh  mainnet_testing.py  post_milestone.sh  post_proof_card.py  post_weekly_digest.sh  provision_tao_account.py  push_origin_fix.sh  setup_node_server.sh  setup_owner_wallet.py  ship_proud_gate.sh  strip_negotiation.py  tao_balance_proof.py  tao_health_check.py  tao_live_e2e.py  tao_wallet_testing.py  test_live_integration.py  upgrade_tao_pq.py  vida_admin.py  vida_covenant_tool.py  vida_mcp_server.py  vida_mcp_test.py
tests/: legacy_wallet_test.py  qa_secure_tests.py  qa_tests.py  test_agent_memory.py  test_agent_memory.py.disabled  test_channels.py  test_coamm.py  test_covenant_deploy.py  test_covenant_negotiation.py  test_covenant_robustness.py  test_covenant_scaffold.py  test_escrow.py  test_gateway.py  test_kaspa_rpc_integration.py  test_kip16_zk.py  test_multisig.py  test_negotiation.py  test_negotiation.py.disabled  test_plugins_phase0.py  test_tao_balance.py  test_tao_derive.py  test_tao_infra.py  test_tao_p2p_optimizer.py  test_tao_pq.py  test_tao_robustness.py  test_tao_session.py  test_tao_stake.py  test_tao_subnet_marketplace.py  test_vault.py  test_x402.py
tests/legacy/: qa_tests.py
vida/: __init__.py  bip39_import.py  bridge.py  ml_dsa_44.py  ml_dsa_65.py  secure_wallet.py  transactions.py  wallet.py
vida/agents/: memory.py  orchestrator.py  staking_optimizer.py  tool_schema.py  verification.py
vida/agents/negotiation/: __init__.py  engine.py  models.py  subscriptions.py
vida/plugins/: __init__.py  dummy.py  policy.py
vida/plugins/covenant/: __init__.py  agent_pot.py  agent_pot_script.py  channels.py  coamm.py  covenant_patterns.py  escrow.py  fees.py  kascov_client.py  kaspa_rpc.py  kip16_zk.py  lab_client.py  negotiation.py  plugin.py  pot_spend.py  proofs.py  rpc_resilience.py  scripts.py  sdk_integration.py  simulator.py  tools.py  vault.py
vida/plugins/covenant/silverscript/: README.md  quine_agent_pot.sil
vida/plugins/covenant/silverscript/contracts/: AtomicSwapHTLC.sil  DeadMansSwitch.sil  MultiSigVault.sil  Ownable.sil  SocialRecovery.sil  StreamingPayment.sil  Subscription.sil  TimeLock.sil  VaultV1.sil  Vesting.sil  escrow_v1.sil
vida/plugins/tao/: __init__.py  client.py  config.py  derive.py  gateway.py  multisig.py  plugin.py  pq.py  provision.py  session.py  staking.py  subnet_client.py  subnet_marketplace.py  substrate_client.py  tools.py  x402.py  yield_optimizer.py
