[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vida"
version = "0.1.0"
description = "Agent-compatible wallet for Kaspa and Bittensor"
readme = "README.md"
license = {text = "MIT (core) / Commercial (covenant module)"}
requires-python = ">=3.11"
dependencies = [
    "kaspa>=2.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
    "substrate-interface>=1.7.0,<2",
    "mnemonic>=0.21",
    "mcp>=1.28",
]

[project.urls]
Homepage = "https://github.com/jeffsiegel1965/vida"
