[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vida"
version = "0.2.0"
description = "Agent-compatible wallet for Kaspa and Bittensor"
readme = "README.md"
license = {text = "MIT (core) / Commercial (covenant module)"}
requires-python = ">=3.11"
dependencies = [
    "kaspa>=2.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
    "substrate-interface>=1.7.0,<2",
    "bittensor>=11.0",  # v11 — Rust SDK with Python bindings (PyPI TBD)
    "mnemonic>=0.21",
    "mcp>=1.28",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "E402",  # Module level import not at top of file — needed for path setup in scripts
    "E701",  # Multiple statements on one line — intentional in some cases
    "F541",  # f-string missing placeholders — used for logging
    "E501",  # Line too long — crypto addresses and API calls exceed 120
    "N801",  # Invalid class name — matches Rust SDK naming conventions
    "N818",  # Exception name suffix — matches existing error type pattern
    "N806",  # Non-lowercase variable — matches SDK naming
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401", "F841"]  # Scripts may have unused imports for convenience
"tests/*" = ["F401", "F841"]    # Test fixtures may appear unused
"vida/agents/orchestrator.py" = ["F821"]  # Dynamic tool dispatch
"vida/plugins/tao/substrate_client.py" = ["F821"]  # Lazy import pattern
"vida/plugins/tao/subnet_marketplace.py" = ["F601"]  # Intentional key override

[project.urls]
Homepage = "https://github.com/jeffsiegel1965/vida"
