[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vida-wallet"
version = "0.2.0"
description = "Session-gated agent wallet for Kaspa (KAS) and Bittensor (TAO) — covenants, subnet payments, x402 auto-pay"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["kaspa", "bittensor", "tao", "agent-wallet", "covenants", "cryptocurrency", "self-custody", "post-quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "kaspa>=2.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
    "substrate-interface>=1.7.0,<2",
    "bittensor>=9.0",
    "mnemonic>=0.21",
    "mcp>=1.28",
]

[project.urls]
Homepage = "https://github.com/jeffsiegel1965/vida"
Documentation = "https://github.com/jeffsiegel1965/vida#readme"
Repository = "https://github.com/jeffsiegel1965/vida"
Issues = "https://github.com/jeffsiegel1965/vida/issues"
Changelog = "https://github.com/jeffsiegel1965/vida/blob/main/CHANGELOG.md"
Roadmap = "https://github.com/jeffsiegel1965/vida/blob/main/ROADMAP.md"
Security = "https://github.com/jeffsiegel1965/vida/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["vida*"]
exclude = ["tests*", "dev*", "data*", "assets*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "E402",  # Module level import not at top of file — needed for path setup in scripts
    "E701",  # Multiple statements on one line — intentional in some cases
    "F541",  # f-string missing placeholders — used for logging
    "E501",  # Line too long — crypto addresses and API calls exceed 120
    "N801",  # Invalid class name — matches Rust SDK naming conventions
    "N818",  # Exception name suffix — matches existing error type pattern
    "N806",  # Non-lowercase variable — matches SDK naming
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401", "F841"]  # Scripts may have unused imports for convenience
"tests/*" = ["F401", "F841"]    # Test fixtures may appear unused
"vida/agents/orchestrator.py" = ["F821"]  # Dynamic tool dispatch
"vida/plugins/tao/substrate_client.py" = ["F821"]  # Lazy import pattern
"vida/plugins/tao/subnet_marketplace.py" = ["F601"]  # Intentional key override
